2002-04-05  Jeffrey Stedfast  <fejj@ximian.com>

	* bootstrap.py (Bootstrap.build): s/zcat/gunzip -dc/ -
	unfortunately zcat does not work so well on Solaris. Hopefully I
	will not anger the gods by committing this :-)

2002-03-27  Manish Singh  <yosh@gimp.org>

	* install-check.c: check for *.c as well (gobject installs a .c
	file as a public header)

2002-03-20  Johan Dahlin  <jdahlin@telia.com>

	* jhbuild.py: if prefix don't exist, create it.

	* moduleinfo.py: Add gail as a dependency to gnome-media module.

	* moduleinfo.py: Add gnome-panel as a dependency to gnome-utils module.
	
	* moduleinfo.py: Add gnome-desktop as a dependency to
	gnome-control-center module.

2002-03-19  Manish Singh  <yosh@gimp.org>

	* install-check.c: So my assumption was wrong. Add cases for *.idl
	and orbit-idl-2

2002-03-18  James Henstridge  <james@daa.com.au>

	* moduleinfo.py: apply Greg Schafer's patch for the gnome1
	build rules.

2002-03-15  Manish Singh  <yosh@gimp.org>

	* Makefile
	* install-check.c: rewrote install-check in C. Much faster now.
	I also did a check for .h[^.]*$ to make it only cmp on header
	files. Not entirely sure that is completely valid (are there any
	installed headers that don't end in .h?)

2002-03-15  Dave Neary  <bolsh@gimp.org>

	* moduleinfo.py (head): Added sawfish and it's
	  dependencies. Watch out for librep trying to install
	  rep.m4 in /usr/shar/aclocal.

2002-03-14  James Henstridge  <james@daa.com.au>

	* moduleinfo.py (head): add glade2c.

	* bootstrap.py (bootstraps): update versions to bootstrap with.

	* jhbuild.py (addpath): set ACLOCAL_AMFLAGS as well.  This should
	make things work a bit better with automake-1.6.

2002-03-06  Havoc Pennington  <hp@redhat.com>

	* moduleinfo.py (gnome1): remove libzvt dep from gnome1 gnome-core

2002-03-06  James Henstridge  <james@daa.com.au>

	* moduleinfo.py (head): add a meta-gnome-devel-tools meta module.

	* module.py (BuildScript._*): force a chdir before configure,
	make, etc.