@@ -1,3 +1,8 @@
+2002-04-05  Alex Graveley  <alex@ximian.com>
+
+	* jhbuild.py (do_shell): Impl to allow starting a new blessed
+	shell from the command line.
+
 2002-04-05  Jeffrey Stedfast  <fejj@ximian.com>
 
 	* bootstrap.py (Bootstrap.build): s/zcat/gunzip -dc/ -
